--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "serve": "http-server ./",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "prod": "npm run webpack -- --mode production",
+    "dev": "npm run webpack -- --mode development"
   },
   "repository": {
     "type": "git",
