--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "serve": "http-server ./",
     "webpack": "webpack",
     "debug": "node --inspect --debug-brk ./node_modules/webpack/bin/webpack.js",
-    "prod": "npm run webpack -- --mode production",
-    "dev": "npm run webpack -- --mode development --watch",
-    "prod:debug": "npm run debug -- --mode production",
-    "dev:debug": "npm run debug -- --mode development"
+    "prod": "npm run webpack -- --env.mode production",
+    "dev": "npm run webpack -- --env.mode development --watch",
+    "prod:debug": "npm run debug -- --env.mode production",
+    "dev:debug": "npm run debug -- --env.mode development"
   },
   "repository": {
     "type": "git",
