--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/TheLarkInn/webpack-workshop-2018#readme",
   "devDependencies": {
-    "http-server": "^0.11.1",
-    "webpack": "^4.8.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "html-webpack-plugin": "3.2.0",
+    "http-server": "0.11.1",
+    "webpack": "4.8.0",
+    "webpack-cli": "3.1.0",
+    "webpack-node-externals": "1.7.2"
   }
 }
