--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "serve": "http-server ./",
+    "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack",
     "debug": "node --inspect --debug-brk ./node_modules/webpack/bin/webpack.js",
     "prod": "npm run webpack -- --env.mode production",
-    "dev": "npm run webpack -- --env.mode development --watch",
+    "dev": "npm run webpack-dev-server -- --env.mode development",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development"
   },
@@ -28,6 +29,7 @@
     "http-server": "0.11.1",
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.8",
     "webpack-node-externals": "1.7.2"
   }
 }
