--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
+    "webpack-merge": "4.1.4",
     "webpack-node-externals": "1.7.2"
   }
 }
