--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/TheLarkInn/webpack-workshop-2018#readme",
   "devDependencies": {
+    "css-loader": "1.0.0",
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.11.1",
+    "style-loader": "0.23.0",
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
