--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack": "webpack",
     "debug": "node --inspect --debug-brk ./node_modules/webpack/bin/webpack.js",
     "prod": "npm run webpack -- --env.mode production",
-    "dev": "npm run webpack-dev-server -- --env.mode development",
+    "dev": "npm run webpack-dev-server -- --env.mode development --hot",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development"
   },
@@ -28,6 +28,7 @@
     "css-loader": "1.0.0",
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.11.1",
+    "mini-css-extract-plugin": "0.4.3",
     "style-loader": "0.23.0",
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
