--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "homepage": "https://github.com/TheLarkInn/webpack-workshop-2018#readme",
   "devDependencies": {
     "css-loader": "1.0.0",
+    "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.11.1",
     "mini-css-extract-plugin": "0.4.3",
     "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
