--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "node --inspect --debug-brk ./node_modules/webpack/bin/webpack.js",
     "prod": "npm run webpack -- --env.mode production",
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
+    "prod:typescript": "npm run prod -- --env.presets typescript",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development"
   },
@@ -31,6 +32,7 @@
     "http-server": "0.11.1",
     "mini-css-extract-plugin": "0.4.3",
     "style-loader": "0.23.0",
+    "ts-loader": "5.2.0",
     "url-loader": "1.1.1",
     "webpack": "4.8.0",
     "webpack-cli": "3.1.0",
