Add webpack-bundle-analyze to analize size of the bundle
Signed-off-by: Connie Leung <cleung334@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "debug": "node --inspect --debug-brk ./node_modules/webpack/bin/webpack.js",
     "prod": "npm run webpack -- --env.mode production",
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
-    "prod:typescript": "npm run prod -- --env.presets typescript",
+    "prod:analyze": "npm run prod -- --env.presets analyze",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development"
   },
@@ -35,6 +35,7 @@
     "ts-loader": "5.2.0",
     "url-loader": "1.1.1",
     "webpack": "4.8.0",
+    "webpack-bundle-analyzer": "3.0.2",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
     "webpack-merge": "4.1.4",
